# EasyNVR

./: CMakeLists.txt  README.md
include/: EasyNvr.h  scope_guard.hpp
include/LuaBridge/: LuaBridge.h
include/luakit/: lua_base.h  lua_function.h  lua_stack.h
libs/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  co.lib  lua-5.2.4.lib  lua-5.3.6.lib  postproc.lib  swresample.lib  swscale.lib
scripts/: Helmet_Head_Person.lua
src/: CameraHandle.cpp  CameraHandle.h  CameraPull.cpp  CameraPull.h  FileUtil.cpp  FileUtil.h  Ncnn.cpp  Ncnn.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  StrUtil.cpp  StrUtil.h  YoloV5.cpp  YoloV5.h  fileutil.hpp  main.cpp
